--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,70 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 /* Browser Reset CSS */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+/* Lorem Text styles */
+.lt-container{
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.lt-lorem{
+    background-color: #f1f5f8;
+    padding-top: 5rem;
+}
+.lt-lorem h2{
+    text-transform: capitalize;
+    color: #063251;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    font-size: 1.75rem;
+    letter-spacing: 0.25rem;
+}
+
+.lt-form{
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+}
+.lt-form label{
+    font-size: 1.25rem;
+    color: #063251;
+}
+.lt-form input{
+    padding: 0.25rem 0.5rem;
+    width: 6rem;
+    border: none;
+    outline: none;
+    margin: 0 0.5rem;
+    font-size: 1.25rem;
+}
+
+.lt-form .lt-btn{
+    background-color: #49a6e9;
+    color: #063251;
+    padding: 0.375rem 0.75rem;
+    width: 10rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.lt-form .lt-btn:hover{
+    color: #49a6e9;
+    background-color: #a5d5f8;
+    border-radius: 0.5rem;
+}
+
+
+/* lorem text */
+.lt-lorem-text{
+    /* font-size: 1rem; */
+    color: #617d98;
 }
